# asisynth

./: .gitignore  AsiSynth.cpp  CMakeLists.txt  ChordPlayerHandler.cpp  ChordPlayerHandler.h  CommonControls.cpp  CommonControls.h  DisplayHandler.cpp  DisplayHandler.h  EchoHandler.cpp  EchoHandler.h  Factory.cpp  Factory.h  Filter.h  IIRFactory.cpp  IIRFactory.h  I_JackHandler.cpp  I_JackHandler.h  InputOutputHandler.cpp  InputOutputHandler.h  MidiCommands.h  MidiEvent.cpp  MidiEvent.h  MidiPassThrough.cpp  MidiPassThrough.h  MidiUtils.cpp  MidiUtils.h  ModeHandler.cpp  ModeHandler.h  PortMapper.cpp  PortMapper.h  SuperLegatoHandler.cpp  SuperLegatoHandler.h  SynthParameters.cpp  SynthParameters.h  SynthesiserHandler.cpp  SynthesiserHandler.h  sonate.json  synth.json
chords/: ChordPlayerHandler.cpp  ChordPlayerHandler.h  Hymn.txt  PreludeInCMinor.txt
data/: Hymn.txt  WeAreTheCampions.txt  sonate.json  synth.json
display/: DisplayHandler.cpp  DisplayHandler.h
echo/: EchoHandler.cpp  EchoHandler.h
handlers/: InputOutputHandler.h
handlers/chords/: ChordPlayerHandler.cpp  ChordPlayerHandler.h
handlers/display/: DisplayHandler.cpp
handlers/echo/: EchoHandler.cpp  EchoHandler.h
handlers/legato/: SuperLegatoHandler.cpp  SuperLegatoHandler.h
handlers/mode/: ModeHandler.cpp  ModeHandler.h
handlers/player/: PlayerHandler.cpp  PlayerHandler.h  PlayerParameters.cpp  PlayerParameters.h
handlers/server/: ServerHandler.cpp  ServerHandler.h
handlers/synth/: Filter.h  IIRFactory.cpp  IIRFactory.h  SynthParameters.cpp  SynthesiserHandler.cpp  SynthesiserHandler.h
handlers/transport/: TransportHandler.cpp  TransportHandler.h
legato/: SuperLegatoHandler.cpp  SuperLegatoHandler.h
mode/: ModeHandler.cpp  ModeHandler.h
player/: PlayerHandler.cpp  PlayerHandler.h  PlayerParameters.cpp  PlayerParameters.h
python/: client.py
sigproc/: liir.c
sounds/: Sounds.cpp  Sounds.h
synth/: Filter.h  IIRFactory.cpp  IIRFactory.h  SynthParameters.cpp  SynthParameters.h  SynthesiserHandler.cpp  SynthesiserHandler.h
transport/: TransportHandler.cpp  TransportHandler.h
